--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ color:white;
 
 <body>
   <h>WEB DİLLERİ</h><br><br>  
-    <img src="resim.jpg.PNG" alt="WEB DİLLERİ" width="300" height="200">
+    <img src="resim.jpg.png" alt="WEB DİLLERİ" width="300" height="200">
 </body>
 </html>
+
