--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 body{
 background-color:black;
-color:white;
+color:yellow;
 }
 </style>
 </head>
@@ -17,4 +17,5 @@ color:white;
     <img src="resim.jpg.png" alt="WEB DİLLERİ" width="300" height="200">
 </body>
 </html>
+
 
