--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@ color:yellow;
     <h>Listeler</h>
     <ul>
         <li>Elma</li>
-        <li><a href="www.google.com">Google<a>/li>
+        <li><a href="www.google.com">Google</a></li>
         <li>Armut</li>
         <li><img src="resim.jpg.png" alt="DİLLER"></li>
+        <ol>
+<li><a href="https://web.whatsapp.com/"><img src="Whatsapp.webp" alt="Whatsapp" width="75" height="75"</a></li>
+        </ol>
     
     
     </ul>
 </body>
 </html>
+
 
 
 
