--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@ color:yellow;
         <li>Elma</li>
         <li><a href="www.google.com">Google</a></li>
         <li>Armut</li>
-        <li><img src="resim.jpg.png" alt="DİLLER"></li>
+        <li><img src="resim.jpg.png" alt="DİLLER" width="300" height="200"></li>
         <ol>
-<li><a href="https://web.whatsapp.com/"><img src="Whatsapp.webp" alt="Whatsapp" width="75" height="75"</a></li>
+<li><a href="https://web.whatsapp.com/"><img src="Whatsapp.webp" alt="Whatsapp" width="75" height="75"></a></li>
         </ol>
     
     
     </ul>
 </body>
 </html>
+
 
 
 
