--- a/YanSayfa.html
+++ b/YanSayfa.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+6<!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,12 @@ color:yellow;
 <body>
   <a href="index.html">Ana sayfa</a>
     <br><br>
+
+    <form>
     <button>Button</button>
+
+    </form>
 </body>
 </html>
+
 
