--- a/YanSayfa.html
+++ b/YanSayfa.html
@@ -17,10 +17,15 @@ color:yellow;
     <br><br>
 
     <form>
-    <button>Button</button>
+        <input type="isim" placeholder="Adınız:">
+        <br><br>
+        <input type="sifre" placeholder="Şifre:">
+    <br><br>
+        <button>Giriş</button>
 
     </form>
 </body>
 </html>
+
 
 
