--- a/YanSayfa.html
+++ b/YanSayfa.html
@@ -1,4 +1,4 @@
-6<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,8 @@ color:yellow;
     <br><br>
 
     <form>
-        <input type="isim" placeholder="Adınız:">
+        <input type="isim" 
+            placeholder="Adınız:">
         <br><br>
         <input type="sifre" placeholder="Şifre:">
     <br><br>
@@ -26,6 +27,7 @@ color:yellow;
     </form>
 </body>
 </html>
+
 
 
 
