--- a/YanSayfa.html
+++ b/YanSayfa.html
@@ -21,12 +21,16 @@ color:yellow;
             placeholder="Adınız:">
         <br><br>
         <input type="sifre" placeholder="Şifre:">
+        <br><br>
+        <input type="email">
+        <textarea></textarea>
     <br><br>
         <button>Giriş</button>
 
     </form>
 </body>
 </html>
+
 
 
 
