--- a/YanSayfa.html
+++ b/YanSayfa.html
@@ -22,14 +22,15 @@ color:yellow;
         <br><br>
         <input type="sifre" placeholder="Şifre:">
         <br><br>
-        <input type="email">
-        <textarea></textarea>
+        <input type="email" placeholder="e-mail">
+        <textarea placeholder="Metin Kutusu"></textarea>
     <br><br>
         <button>Giriş</button>
 
     </form>
 </body>
 </html>
+
 
 
 
