--- a/YanSayfa.html
+++ b/YanSayfa.html
@@ -25,11 +25,30 @@ color:yellow;
         <input type="email" placeholder="e-mail">
         <textarea placeholder="Metin Kutusu"></textarea>
     <br><br>
+        <label>
+            <input type="checkbox"> Elma
+        </label>
+
+        <label>
+            <input type="checkbox"> Armut
+        </label>
+        <br><br>
+        <label>
+            <input type="radio" name="d">
+            HTML
+        </label>
+        <br><br>
+        <label>
+            <input type="radio" name="d">
+            C++
+        </label>
+        <input type="submit" value="Gönder">
         <button>Giriş</button>
 
     </form>
 </body>
 </html>
+
 
 
 
