--- a/YanSayfa.html
+++ b/YanSayfa.html
@@ -42,12 +42,15 @@ color:yellow;
             <input type="radio" name="d">
             C++
         </label>
-        <input type="submit" value="Gönder">
+        <input type="submit" value="Gönder"><br><br>
+        <input type="number">
+        <input type="date">
         <button>Giriş</button>
 
     </form>
 </body>
 </html>
+
 
 
 
