--- a/YanSayfa.html
+++ b/YanSayfa.html
@@ -17,10 +17,10 @@ color:yellow;
     <br><br>
 
     <form>
-        <input type="isim" 
+        <input type="text" 
             placeholder="Adınız:">
         <br><br>
-        <input type="sifre" placeholder="Şifre:">
+        <input type="password" placeholder="Şifre:">
         <br><br>
         <input type="email" placeholder="e-mail">
         <textarea placeholder="Metin Kutusu"></textarea>
@@ -50,6 +50,7 @@ color:yellow;
     </form>
 </body>
 </html>
+
 
 
 
