--- a/YanSayfa.html
+++ b/YanSayfa.html
@@ -46,10 +46,11 @@ color:yellow;
         <input type="number">
         <input type="date">
         <button>Giriş</button>
-
+<input type="text" required>
     </form>
 </body>
 </html>
+
 
 
 
