--- a/YanSayfa.html
+++ b/YanSayfa.html
@@ -47,9 +47,18 @@ color:yellow;
         <input type="date">
         <button>Giriş</button>
 <input type="text" required>
+        <br><br>
+        <table border="1">
+
+        <tr>İsim</tr>
+            <tr>Yaș</tr>
+            <td>5</td>
+            <td>HTML</td>
+            
     </form>
 </body>
 </html>
+
 
 
 
