--- a/YanSayfa.html
+++ b/YanSayfa.html
@@ -48,16 +48,18 @@ color:yellow;
         <button>Giriş</button>
 <input type="text" required>
         <br><br>
+        <table>
         <table border="1">
 
         <tr>İsim</tr>
             <tr>Yaș</tr>
             <td>5</td>
             <td>HTML</td>
-            
+        </table>
     </form>
 </body>
 </html>
+
 
 
 
