--- a/YanSayfa.html
+++ b/YanSayfa.html
@@ -51,14 +51,15 @@ color:yellow;
         <table border="1">
         
 
-        <tr>İsim</tr>
-            <tr>Yaș</tr>
+        <th>İsim</th>
+            <th>Yaș</th>
             <td>5</td>
             <td>HTML</td>
         </table>
     </form>
 </body>
 </html>
+
 
 
 
